--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -37,7 +37,7 @@
         color: white;
         background-color: rgb(86, 94, 170);
         transition-duration: 0.3s;
-        border-radius: 20px;
+        border-radius: 2rem;
     }
     button:hover {
         background-color: rgb(1, 173, 171);
